fix datepicker style behind card header

--- a/app/core/static/admin/assets/css/custom/custom.css
+++ b/app/core/static/admin/assets/css/custom/custom.css
@@ -31,3 +31,7 @@
     color: #fff;
     background-color: #00A9A1;
 }
+
+.card .card-header {
+    z-index: auto!important;
+}
